# small_side_projects

./: .gitignore  Passwords.py  README.md  subtraction.py
ImageProcessing/: Cargo.toml
ImageProcessing/src/: backup.rs  main.rs
py_Image/: Playground.py
py_Platformer/: Platformer.py
py_Video_Converter/: GTK_Video_Converter.py  codecs.ini
py_autostereogram/: AutoStereogram.py
py_jet_dodge/: First_Program.py
py_rocket/: keyboard.py  rocket.py  start.sh
vbs_verus/: Start.vbs  verus.bat
